animations now work on mobile now we can get started with the sizes and smaller fixes

--- a/styles/blocks/f-info-card.css
+++ b/styles/blocks/f-info-card.css
@@ -113,9 +113,9 @@ As seen on "How does it work".
 }
 
 .f-info-card_image { /*TODO: This could be useful? Not sure where, tho*/
-	position: absolute;
-	top: 0;
-	width: 100%;
+	
+	position: fixed;
+	width: 100%
 	
 }
 
